# INFO905-TP3

./: .gitignore  pyproject.toml  tp.ipynb
