[tool.poetry]
name = "info905-tp3"
version = "0.1.0"
description = ""
authors = ["Simon LEONARD <git-1001af4@sinux.sh>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
matplotlib = "^3.8.2"
numpy = "^1.26.2"
scipy = "^1.11.4"
scikit-learn = "^1.3.2"
six = "^1.16.0"
pillow = "^10.1.0"
jupyter = "^1.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
